# xrsandbox

./: .gitmodules  CMakeLists.txt
projects/: CMakeLists.txt
projects/xrbase/public/: graphics_utilities.h  xrappbase.h
projects/xrbase/src/: xrappbase.cpp
projects/xrsandbox/: CMakeLists.txt
projects/xrsandbox/assets/textures/: side.tga  top.tga
projects/xrsandbox/src/: xrs_app.cpp
